--- a/public/frontend/assets/css/style2.css
+++ b/public/frontend/assets/css/style2.css
@@ -352,7 +352,7 @@ a.btn:hover {
     width: 100%;
     max-height: 190px;
     min-height: 190px;
-    object-fit: cover;
+    object-fit: contain;
     object-position: center;
 }
 
